--- a/Simon Says V3/Engine/Engine.vcxproj.filters
+++ b/Simon Says V3/Engine/Engine.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="Mouse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Squares.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="FramebufferPS.hlsl">
